--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="js/aabb.js"></script>
   <script src="js/body.js"></script>
   <script src="js/world.js"></script>
+  <script src="js/defaults.js"></script>
+  <script src="js/camera.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
 </body>
