--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <script src="js/fixture.js"></script>
   <script src="js/aabb.js"></script>
   <script src="js/body.js"></script>
+  <script src="js/dynamics.js"></script>
+  <script src="js/collisionhandler.js"></script>
   <script src="js/world.js"></script>
   <script src="js/defaults.js"></script>
   <script src="js/camera.js"></script>
