--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="js/defaults.js"></script>
   <script src="js/camera.js"></script>
   <script src="js/game.js"></script>
+  <script src="js/input.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
