--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/body.js"></script>
   <script src="js/dynamics.js"></script>
   <script src="js/collisionhandler.js"></script>
+  <script src="js/grid.js"></script>
   <script src="js/world.js"></script>
   <script src="js/defaults.js"></script>
   <script src="js/camera.js"></script>
