--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <div id="content">
     <canvas id="canvas" width=800px height=600px></canvas>
+    <canvas id="hud" width=100px height=200px></canvas>
   </div>
   <script src="js/utils.js"></script>
   <script src="js/lodash.min.js"></script>
@@ -28,6 +29,7 @@
   <script src="js/world.js"></script>
   <script src="js/defaults.js"></script>
   <script src="js/camera.js"></script>
+  <script src="js/hud.js"></script>
   <script src="js/game.js"></script>
   <script src="js/input.js"></script>
   <script src="js/main.js"></script>
